--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -55,7 +55,10 @@ add_definitions(-DSHOW_DEBUG_VISUALISATION)
 endif()
 
 ## Directories
-find_package(densecrf REQUIRED)
+
+#find_package(densecrf REQUIRED)
+#replacing find_package with set for docker build convenience
+set(densecrf_DIR /opt/densecrf/build/)
 set(cofusion_SHADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders" CACHE PATH "Where the shaders live")
 
 message(STATUS "Directories: ")
