Fixed gSCLICr.h missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,8 +59,9 @@ endif (NOT Boost_FOUND)
 #find_package(gSLICr REQUIRED)
 #replacing with its directory location
 set(gSLICr_DIR /opt/gSLICr/build/)
-#target_include_directories(${PROJECT_NAME} PUBLIC "/opt/gSLICr/build/include" )
-include_directories("/opt/gSLICr/build/include")
+target_include_directories(${PROJECT_NAME} PUBLIC "/usr/include/gSLICr_Lib" )
+
+#include_directories("/opt/gSLICr/build/include")
 
 # Pangolin
 find_package(Pangolin 0.5 REQUIRED)
