--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,9 @@ endif (NOT Boost_FOUND)
 #find_package(gSLICr REQUIRED)
 #replacing with its directory location
 set(gSLICr_DIR /opt/gSLICr/build/)
+include_directories(${gSLICr_DIR}/gSLICr_Lib)
+link_directories(${gSLICr_DIR}/build)
+
 #target_include_directories(${PROJECT_NAME} PUBLIC "/usr/include/gSLICr_Lib" )
 
 include_directories("/usr/include/gSLICr_Lib")
